# nbllm

./: .gitignore  LICENSE  Makefile  README.md  mse.py  pyproject.toml  pytest.ini
.github/workflows/: test-optional-deps.yml  test.yml
apps/: app.py  coding_agent__marimo_notebook.py  edit.py  teacher.py
checks/: README.md  test_playwright_not_installed.py
src/nbllm/: __init__.py  __main__.py  chat.py  chat_config.py  chat_factory.py  chat_service.py  config.py  file_completer.py  not_installed.py  ui.py
src/nbllm/clickx/: __init__.py  generator.py  inspector.py
src/nbllm/llmx/: click_inspector.py  llmx.py
src/nbllm/prompts/: __init__.py  _socratic.py
src/nbllm/tools/: __init__.py  command.py  filesystem.py  playwright_browser.py
tests/: __init__.py  test_app_import.py  test_chat_class.py  test_file_tools.py  test_keyboard_shortcut.py  test_mode_ui.py  test_streaming_padding.py
