[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbllm"
version = "0.1.0"
description = "A toolbox to build your own assistant for in the terminal."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mse11", email = "sestosko@gmail.com"},
]
keywords = ["ai", "assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "llm>=0.12.1",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "prompt_toolkit>=3.0.0",
    "questionary>=1.10.0",
    "srsly>=2.4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
browser = [
    "playwright>=1.40.0",
]
marimo = [
    "marimo>=0.1.3",
]


[project.scripts]
nbllm = "nbllm.__main__:main"

[project.urls]
Homepage = "https://github.com/mse11/nbllm"
Documentation = "https://github.com/mse11/nbllm#readme"
Repository = "https://github.com/mse11/nbllm.git"
Issues = "https://github.com/mse11/nbllm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
